delete feed from advertiser
