# docs/swagger.json
@@ -863,43 +863,6 @@
                 }
             }
         },
-        "/advertiser/feed-link": {
-            "post": {
-                "security": [
-                    {
-                        "CookieAuth": []
-                    }
-                ],
-                "description": "Создает или обновляет уникальную публичную ссылку на feed объявлений текущего рекламодателя",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "advertiser"
-                ],
-                "summary": "Генерация уникальной feed-ссылки",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.FeedLinkResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/httpx.Error"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/httpx.Error"
-                        }
-                    }
-                }
-            }
-        },
         "/advertiser/login": {
             "post": {
                 "description": "Аутентифицирует рекламодателя по email или телефону и паролю",
@@ -1423,14 +1386,6 @@
             "properties": {
                 "id": {
                     "type": "integer"
-                }
-            }
-        },
-        "dto.FeedLinkResponse": {
-            "type": "object",
-            "properties": {
-                "url": {
-                    "type": "string"
                 }
             }
         },
